[metadata]
name = home_assistant_integrations
version = attr: components.__version__.__version__
description = Custom Home Assistant Integrations
url = https://github.com/dskrypa/home_assistant_integrations
project_urls =
    Source = https://github.com/dskrypa/home_assistant_integrations
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
include_package_data = True
packages = find:
package_dir = = components
python_requires = >3.9
install_requires =
    nest-client @ git+https://github.com/dskrypa/nest-client

[options.packages.find]
where = components

[options.extras_require]
homeassistant =
    homeassistant
